# rusty-esp-alarm

./: .gitignore  Cargo.toml  apply_ota.sh  build.rs  flake.nix  sdkconfig.defaults
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust_ci.yml
firmware/: Cargo.toml  apply_ota.sh  build.rs  partitions.csv
firmware/.cargo/: config.toml
firmware/.helix/: languages.toml
firmware/src/: alarm.rs  main.rs  network.rs  scheduler.rs  settings.rs
ha_types/src/: lib.rs
nix/: effects.nix  flake-module.nix  overlays.nix  rust-esp.nix  rust-src-esp.nix
settings-generator/: .gitignore  Cargo.toml
settings-generator/src/: main.rs
src/: alarm.rs  eth.rs  lib.rs  main.rs  mqtt.rs  network.rs  scheduler.rs  settings.rs
