[package]
name = "rusty-esp-alarm"
version = "0.1.0"
edition = "2021"
authors = ["akosnad"]

[dependencies]
defmt = "0.3.10"
embassy-executor = { version = "0.6.3", features = ["nightly", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-net = { version = "0.5.0", features = ["defmt", "dhcpv4-hostname", "dhcpv4", "medium-ethernet", "tcp", "udp"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.5.0", features = ["nightly"] }
esp-backtrace = { version = "0.14.2", features = ["defmt", "esp32", "exception-handler", "panic-handler"] }
esp-hal = { version = "0.22.0", features = ["defmt", "esp32"] }
esp-hal-embassy = { version = "0.5.0", features = ["defmt", "esp32", "integrated-timers"] }
esp-println = { version = "0.12.0", default-features = false, features = ["auto", "defmt-espflash", "esp32"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
