[package]
name = "rusty-esp-alarm"
version = "0.2.0"
authors = ["akosnad"]
edition = "2024"

[workspace]
members = ["./firmware", "./ha_types", "./settings-generator"]

[lib]

[dependencies]
bitfield-struct = "0.11.0"
defmt = "1.0.1"
embassy-futures = "0.1.1"
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-storage-async = "0.4.1"
fnv = { version = "1.0.7", default-features = false }
minicbor = "2.0.0"
minicbor-serde = "0.6.0"
sequential-storage = { version = "4.0.3", features = ["defmt-03"] }
serde = { version = "1.0.219", default-features = false }


[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

